# Sigma-Engine

./: .gitignore  .gitignore~  .gitmodules  .travis.yml  AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSpriteEditor.cpp  AnimatedSpriteEditor.h  AudioClip.cpp  AudioClip.h  BaseGame.cpp  BaseGame.h  Boolean.cpp  Boolean.h  Box.cpp  Box.h  Button.cpp  Button.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  Component.cpp  Component.h  ComponentEditor.cpp  ComponentEditor.h  DebugDraw.h  Editor.h  Entry.cpp  Entry.h  EscapeColors.h  GUI.cpp  GUI.h  GUIGFX.cpp  GUIGFX.h  GameExample.h  GameLogic.cpp  GameLogic.h  GameLoop.cpp  (+84 more)
CMakeModules/: FindBox2D.cmake~  FindLua52.cmake  submodules.cmake
assets/: hello_world.lua  mapg.json  raw_track.json  tg_track.json  track.json  track.tmx
dependencies/ChaiScript/include/chaiscript/utility/: utility.hpp
